@@ -17,6 +17,10 @@
 ;;
 ;; TODO: Fast callouts
 ;; TODO: Configurable heartbeat interval a la MudOS
+;; TODO: Like Pike: replace() http://caudium.net/developer/pikeref/ex/replace.html
+;; TODO::  See Zonk's "Wunschzettel"
+;; TODO: Like Pike: reverse() http://caudium.net/developer/pikeref/ex/reverse.html
+;; TODO: Like Pike: `operator()s as lfuns. http://caudium.net/developer/pikeref/
 ;; TODO: Try replacing smalloc with an adjusted ptmalloc, if it makes sense.
 ;; TODO: Alternatively investigate MPS (http://www.ravenbrook.com/project/mps/)
 ;; TODO: general coloured efuns
@@ -36,12 +40,14 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 356)
-(Parent-Version lpmud 3-3 355)
-(Version-Log "struct bug corrections.")
+(Project-Version lpmud 3-3 357)
+(Parent-Version lpmud 3-3 356)
+(Version-Log "The 'indexing one past' for strings didn't work with the empty string.
+It is possible to redefine a function with more arguments.
+Escaping newlines in #if on Windows didn't work.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 11 Jan 2003 19:00:19 -0700")
+(Checkin-Time "Thu, 16 Jan 2003 17:53:02 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -78,8 +84,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.56 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.419 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.294 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.420 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.295 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -166,9 +172,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.12 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.13 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.3 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.42 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.43 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.32 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
@@ -241,7 +247,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.16 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.1 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.20 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.21 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -518,7 +524,7 @@
   (src/bugs/b-020916-files/registry.o (lpmud/b/b/38_registry.o 1.1 644) :no-keywords)
   (src/bugs/b-020916-files/debugger.h (lpmud/b/b/39_debugger.h 1.1 644) :no-keywords)
 
-  (src/bugs/f-summary (lpmud/c/37_f-summary 1.39.1.86 644) :no-keywords)
+  (src/bugs/f-summary (lpmud/c/37_f-summary 1.39.1.87 644) :no-keywords)
   (src/bugs/f-981027-0 (lpmud/g/29_f-981027-0 1.2 644) :no-keywords)
   (src/bugs/f-981027-1 (lpmud/g/28_f-981027-1 1.2 644) :no-keywords)
   (src/bugs/f-981027-2 (lpmud/g/27_f-981027-2 1.2 644) :no-keywords)
@@ -747,6 +753,7 @@
   (src/bugs/f-020916 (lpmud/a/b/27_f-020916 1.1 644) :no-keywords)
   (src/bugs/f-020918 (lpmud/b/b/25_f-020918 1.1 644) :no-keywords)
   (src/bugs/f-020921 (lpmud/b/b/29_f-020921 1.1 644) :no-keywords)
+  (src/bugs/f-030515 (lpmud/d/b/12_f-030515 1.1 644) :no-keywords)
 
   (src/bugs/p-981027-1 (lpmud/g/25_p-981027-1 1.2 644) :no-keywords)
   (src/bugs/doomdark/strutil.c (lpmud/g/31_strutil.c 1.2 644) :no-keywords)
@@ -926,7 +933,7 @@
   (doc/concepts/files (lpmud/n/33_files 1.2 644))
   (doc/concepts/hooks (lpmud/h/9_hooks 1.10.1.17 644))
   (doc/concepts/imp (lpmud/n/34_imp 1.4 644))
-  (doc/concepts/intermud (lpmud/m/48_intermud 1.6 644))
+  (doc/concepts/intermud (lpmud/m/48_intermud 1.7 644))
   (doc/concepts/intermud.basic (lpmud/m/49_intermud.b 1.2 644))
   (doc/concepts/memory (lpmud/n/35_memory 1.4 644))
   (doc/concepts/mysql (lpmud/f/18_HOWTO 1.1.1.5 644))
